# DepShield

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dep_shield/: __init__.py
dep_shield/cli/: __init__.py  main.py
dep_shield/core/: __init__.py  matcher.py
dep_shield/core/parsers/: __init__.py  base.py  nodejs.py  python.py  registry.py
dep_shield/osv/: __init__.py  offline.py  online.py
dep_shield/output/: __init__.py  formatters.py
dep_shield/utils/: __init__.py  logging.py  path_utils.py  performance.py
examples/: vulnerable_package.json  vulnerable_requirements.txt
tests/: __init__.py  test_parsers.py
